--- a/web_hand.ipynb
+++ b/web_hand.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  get the button HTMLs\n",
+    "html_source_code = browser.execute_script(\"return document.querySelector('game-app').shadowRoot.querySelector('game-theme-manager').querySelector('game-keyboard').shadowRoot.querySelectorAll('button');\")\n",
+    "# html_source_code = browser.execute_script(\"return document.querySelector('game-app').shadowRoot.querySelector('game-theme-manager').querySelector('game-keyboard');\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,27 +63,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  get the button HTMLs\n",
-    "html_source_code = browser.execute_script(\"return document.querySelector('game-app').shadowRoot.querySelector('game-theme-manager').querySelector('game-keyboard').shadowRoot.querySelectorAll('button');\")\n",
-    "# html_source_code = browser.execute_script(\"return document.querySelector('game-app').shadowRoot.querySelector('game-theme-manager').querySelector('game-keyboard');\")"
+    "guess = 'brunt'\n",
+    "elem.send_keys(guess + Keys.RETURN)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<game-tile letter=\"s\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"r\" evaluation=\"present\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"i\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"p\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"r\" evaluation=\"present\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"o\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"a\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"e\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"b\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"r\" evaluation=\"correct\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"u\" evaluation=\"correct\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"n\" evaluation=\"correct\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n"
+     ]
+    }
+   ],
    "source": [
-    "qry_script = \"\"\"return document.querySelector('game-app').shadowRoot.querySelectorAll('game-row')[5].shadowRoot.querySelectorAll('game-tile[letter]')\"\"\""
+    "for n in range(6):\n",
+    "    qry_script = f\"\"\"return document.querySelector('game-app').shadowRoot.querySelectorAll('game-row')[{n}].shadowRoot.querySelectorAll('game-tile[letter]')\"\"\"\n",
+    "\n",
+    "    qry_r = browser.execute_script(qry_script)\n",
+    "    for i, element in enumerate(qry_r):\n",
+    "        try:\n",
+    "            row_result = qry_r[i].get_attribute(\"outerHTML\")\n",
+    "            print(row_result)\n",
+    "        except:\n",
+    "            print(f\"no result for row {i}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0 \n",
+    "qry_script = f\"\"\"return document.querySelector('game-app').shadowRoot.querySelectorAll('game-row')[{i}].shadowRoot.querySelectorAll('game-tile[letter]')\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qry_script = \"\"\"return document.querySelector('game-app').shadowRoot.querySelectorAll('game-row')[0].shadowRoot.querySelectorAll('game-tile[letter]')\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,18 +141,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<button data-key=\"n\" data-state=\"present\" class=\"\">n</button>'"
+       "'<game-tile letter=\"s\" evaluation=\"absent\" reveal=\"\"></game-tile>'"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qry_r[0].get_attribute(\"outerHTML\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'html_source_code' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_13870/3090104933.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhtml_source_code\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_attribute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"outerHTML\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'html_source_code' is not defined"
+     ]
     }
    ],
    "source": [
@@ -106,16 +187,6 @@
    "outputs": [],
    "source": [
     "# need to slow down here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "guess = 'strip'\n",
-    "elem.send_keys(guess + Keys.RETURN)"
    ]
   },
   {
