--- a/web_hand.ipynb
+++ b/web_hand.ipynb
@@ -107,13 +107,14 @@
     "        try:\n",
     "            row_result = qry_r[i].get_attribute(\"outerHTML\")\n",
     "            print(row_result)\n",
+    "            row_result.find('letter=')\n",
     "        except:\n",
     "            print(f\"no result for row {i}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,22 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'<game-tile letter=\"s\" evaluation=\"absent\" reveal=\"\"></game-tile>'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l evaluation=\"absent\"\n"
+     ]
     }
    ],
    "source": [
-    "qry_r[0].get_attribute(\"outerHTML\")"
+    "sub = qry_r[0].get_attribute(\"outerHTML\")\n",
+    "\n",
+    "letter = sub[(sub.find('letter=')):(sub.find('letter=')+1)]\n",
+    "status = sub[(sub.find('evaluation=')):(sub.find('\" reveal')+1)]\n",
+    "\n",
+    "print(letter + \" \" + status)"
    ]
   },
   {
