--- a/web_hand.ipynb
+++ b/web_hand.ipynb
@@ -73,28 +73,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<game-tile letter=\"s\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"r\" evaluation=\"present\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"i\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"p\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"r\" evaluation=\"present\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"o\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"a\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"e\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"b\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"r\" evaluation=\"correct\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"u\" evaluation=\"correct\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"n\" evaluation=\"correct\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n"
+      "s,absent\n",
+      "t,absent\n",
+      "r,present\n",
+      "i,absent\n",
+      "p,absent\n",
+      "r,present\n",
+      "o,absent\n",
+      "a,absent\n",
+      "t,absent\n",
+      "e,absent\n",
+      "b,absent\n",
+      "r,correct\n",
+      "u,correct\n",
+      "n,correct\n",
+      "t,absent\n"
      ]
     }
    ],
@@ -105,9 +105,11 @@
     "    qry_r = browser.execute_script(qry_script)\n",
     "    for i, element in enumerate(qry_r):\n",
     "        try:\n",
-    "            row_result = qry_r[i].get_attribute(\"outerHTML\")\n",
-    "            print(row_result)\n",
-    "            row_result.find('letter=')\n",
+    "            sub = qry_r[i].get_attribute(\"outerHTML\")\n",
+    "            letter = sub[(sub.find('letter=')+8):(sub.find('letter=')+9)]\n",
+    "            stat_target = (sub.find('\" reveal')+1) - (sub.find('evaluation=')) - 11\n",
+    "            status = sub[(sub.find('evaluation='))+12:(sub.find('evaluation='))+10+stat_target]\n",
+    "            print(letter +','+status)\n",
     "        except:\n",
     "            print(f\"no result for row {i}\")"
    ]
@@ -142,23 +144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "l evaluation=\"absent\"\n"
+      "9\n",
+      "r present\n"
      ]
     }
    ],
    "source": [
-    "sub = qry_r[0].get_attribute(\"outerHTML\")\n",
+    "sub = qry_r[2].get_attribute(\"outerHTML\")\n",
     "\n",
-    "letter = sub[(sub.find('letter=')):(sub.find('letter=')+1)]\n",
-    "status = sub[(sub.find('evaluation=')):(sub.find('\" reveal')+1)]\n",
+    "letter = sub[(sub.find('letter=')+8):(sub.find('letter=')+9)]\n",
+    "stat_target = (sub.find('\" reveal')+1) - (sub.find('evaluation=')) - 11\n",
+    "status = sub[(sub.find('evaluation='))+12:(sub.find('evaluation='))+10+stat_target]\n",
     "\n",
+    "print(stat_target)\n",
     "print(letter + \" \" + status)"
    ]
   },
