restructuring and beginning bot.py
moved more output data to the specific data folder, and began reducing each independent section into the required portions for the bot.py file

--- a/game_loop_only.ipynb
+++ b/game_loop_only.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "f = open('guesses.txt','r')\n",
+    "f = open('data/guesses.txt','r')\n",
     "guesses = []\n",
     "\n",
     "for line in f:\n",
@@ -81,6 +81,350 @@
    ],
    "source": [
     "len(words5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value_set = pd.read_csv('data/rank_set.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>guess</th>\n",
+       "      <th>score_match</th>\n",
+       "      <th>score_exact_match</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>double</th>\n",
+       "      <th>total_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>aahed</td>\n",
+       "      <td>3973.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4091.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>aalii</td>\n",
+       "      <td>4019.0</td>\n",
+       "      <td>269.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4288.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>aargh</td>\n",
+       "      <td>3557.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3647.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>aarti</td>\n",
+       "      <td>4257.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4397.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>abaca</td>\n",
+       "      <td>3695.0</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4206.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  guess  score_match  score_exact_match solution double  \\\n",
+       "0           0  aahed       3973.0              118.0      NaN   True   \n",
+       "1           1  aalii       4019.0              269.0      NaN   True   \n",
+       "2           2  aargh       3557.0               90.0      NaN   True   \n",
+       "3           3  aarti       4257.0              140.0      NaN   True   \n",
+       "4           4  abaca       3695.0              511.0      NaN   True   \n",
+       "\n",
+       "   total_score  \n",
+       "0       4091.0  \n",
+       "1       4288.0  \n",
+       "2       3647.0  \n",
+       "3       4397.0  \n",
+       "4       4206.0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value_set.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value_no_doubles = (value_set.loc[(value_set['double']!=True)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>guess</th>\n",
+       "      <th>score_match</th>\n",
+       "      <th>score_exact_match</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>double</th>\n",
+       "      <th>total_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>26</td>\n",
+       "      <td>abers</td>\n",
+       "      <td>4061.0</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4194.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>27</td>\n",
+       "      <td>abets</td>\n",
+       "      <td>3891.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4016.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>28</td>\n",
+       "      <td>abhor</td>\n",
+       "      <td>3302.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3403.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>29</td>\n",
+       "      <td>abide</td>\n",
+       "      <td>3557.0</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3772.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>30</td>\n",
+       "      <td>abies</td>\n",
+       "      <td>3833.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3992.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12968</th>\n",
+       "      <td>12968</td>\n",
+       "      <td>zygal</td>\n",
+       "      <td>2474.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2577.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12969</th>\n",
+       "      <td>12969</td>\n",
+       "      <td>zygon</td>\n",
+       "      <td>2105.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2174.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12970</th>\n",
+       "      <td>12970</td>\n",
+       "      <td>zymes</td>\n",
+       "      <td>2683.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2745.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12971</th>\n",
+       "      <td>12971</td>\n",
+       "      <td>zymic</td>\n",
+       "      <td>1929.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1983.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>double</th>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8323 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0  guess  score_match  score_exact_match solution double  \\\n",
+       "26              26  abers       4061.0              133.0      NaN    NaN   \n",
+       "27              27  abets       3891.0              125.0      NaN    NaN   \n",
+       "28              28  abhor       3302.0              101.0     True    NaN   \n",
+       "29              29  abide       3557.0              215.0     True    NaN   \n",
+       "30              30  abies       3833.0              159.0      NaN    NaN   \n",
+       "...            ...    ...          ...                ...      ...    ...   \n",
+       "12968        12968  zygal       2474.0              103.0      NaN    NaN   \n",
+       "12969        12969  zygon       2105.0               69.0      NaN    NaN   \n",
+       "12970        12970  zymes       2683.0               62.0      NaN    NaN   \n",
+       "12971        12971  zymic       1929.0               54.0      NaN    NaN   \n",
+       "double           0  False          0.0                0.0    False  False   \n",
+       "\n",
+       "        total_score  \n",
+       "26           4194.0  \n",
+       "27           4016.0  \n",
+       "28           3403.0  \n",
+       "29           3772.0  \n",
+       "30           3992.0  \n",
+       "...             ...  \n",
+       "12968        2577.0  \n",
+       "12969        2174.0  \n",
+       "12970        2745.0  \n",
+       "12971        1983.0  \n",
+       "double          0.0  \n",
+       "\n",
+       "[8323 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value_no_doubles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "strongest start suggestion\n",
+      "soare\n",
+      "4947.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('strongest start suggestion')\n",
+    "print (value_no_doubles['guess'][value_no_doubles['total_score'].idxmax()])\n",
+    "print (value_no_doubles['total_score'][value_no_doubles['total_score'].idxmax()])"
    ]
   },
   {
@@ -219,6 +563,26 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ranks.to_csv('data/rank_set.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('strongest start suggestion')\n",
+    "print (df_ranks['guess'][df_ranks['total_score'].idxmax()])\n",
+    "print (df_ranks['total_score'][df_ranks['total_score'].idxmax()])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -236,84 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_notcontains(grey,df):\n",
-    "    df_sub = df\n",
-    "    for l in grey:\n",
-    "        df_sub = (df_sub.loc[(~df_sub['guess'].str.contains(l))])\n",
-    "    return df_sub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_by_contains(letters,df):\n",
-    "    df_sub = df\n",
-    "    for l in letters:\n",
-    "        df_sub = (df_sub.loc[(df_sub['guess'].str.contains(l))])\n",
-    "    return df_sub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_by_location(loc,letter,df):\n",
-    "    df_sub = df\n",
-    "    loc = loc-1 # for easier use 0 is positon 1\n",
-    "    for l in letter:\n",
-    "        df_sub = (df_sub.loc[(df_sub['guess'].str[loc]==l)])\n",
-    "    return df_sub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# confirm letter not in location!\n",
-    "def remove_by_not_location(loc,letter,df):\n",
-    "    df_sub = df\n",
-    "    loc = loc-1 # for easier use 0 is positon 1\n",
-    "    for l in letter:\n",
-    "        df_sub = (df_sub.loc[(df_sub['guess'].str[loc]!=l)])\n",
-    "    return df_sub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_by_letter_count(letter,count,df):\n",
-    "    df_sub = df\n",
-    "    for l in letter:\n",
-    "        df_sub = (df_sub.loc[(df_sub['guess'].str.count(letter)==count)])\n",
-    "    return df_sub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_ranks = df_ranks.loc[(df_ranks['solution']==True)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -340,10 +627,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_notcontains(grey,df):\n",
+    "    df_sub = df\n",
+    "    for l in grey:\n",
+    "        df_sub = (df_sub.loc[(~df_sub['guess'].str.contains(l))])\n",
+    "    return df_sub\n",
+    "\n",
+    "def remove_by_contains(letters,df):\n",
+    "    df_sub = df\n",
+    "    for l in letters:\n",
+    "        df_sub = (df_sub.loc[(df_sub['guess'].str.contains(l))])\n",
+    "    return df_sub\n",
+    "\n",
+    "def remove_by_location(loc,letter,df):\n",
+    "    df_sub = df\n",
+    "    loc = loc-1 # for easier use 0 is positon 1\n",
+    "    for l in letter:\n",
+    "        df_sub = (df_sub.loc[(df_sub['guess'].str[loc]==l)])\n",
+    "    return df_sub\n",
+    "\n",
+    "# confirm letter not in location!\n",
+    "def remove_by_not_location(loc,letter,df):\n",
+    "    df_sub = df\n",
+    "    loc = loc-1 # for easier use 0 is positon 1\n",
+    "    for l in letter:\n",
+    "        df_sub = (df_sub.loc[(df_sub['guess'].str[loc]!=l)])\n",
+    "    return df_sub\n",
+    "    \n",
+    "def remove_by_letter_count(letter,count,df):\n",
+    "    df_sub = df\n",
+    "    for l in letter:\n",
+    "        df_sub = (df_sub.loc[(df_sub['guess'].str.count(letter)==count)])\n",
+    "    return df_sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_ranks = df_ranks.loc[(df_ranks['solution']==True)]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "here is the game aid loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate loop\n"
    ]
   },
   {
