--- a/web_hand.ipynb
+++ b/web_hand.ipynb
@@ -2,18 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  get the button HTMLs\n",
-    "html_source_code = browser.execute_script(\"return document.querySelector('game-app').shadowRoot.querySelector('game-theme-manager').querySelector('game-keyboard').shadowRoot.querySelectorAll('button');\")\n",
-    "# html_source_code = browser.execute_script(\"return document.querySelector('game-app').shadowRoot.querySelector('game-theme-manager').querySelector('game-keyboard');\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,38 +52,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "guess = 'brunt'\n",
+    "guess = 'vital'\n",
     "elem.send_keys(guess + Keys.RETURN)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_result(row, browser):\n",
+    "    results = {}\n",
+    "    qry_script = f\"\"\"return document.querySelector('game-app').shadowRoot.querySelectorAll('game-row')[{row}].shadowRoot.querySelectorAll('game-tile[letter]')\"\"\"\n",
+    "    qry_r = browser.execute_script(qry_script)\n",
+    "    for i, element in enumerate(qry_r):\n",
+    "        try:\n",
+    "            sub = element.get_attribute(\"outerHTML\")\n",
+    "            letter = sub[(sub.find('letter=')+8):(sub.find('letter=')+9)]\n",
+    "            stat_target = (sub.find('\" reveal')+1) - (sub.find('evaluation=')) - 11\n",
+    "            status = sub[(sub.find('evaluation='))+12:(sub.find('evaluation='))+10+stat_target]\n",
+    "            # store the resutls to return\n",
+    "            results[letter] = [status,str(i)] \n",
+    "        except:\n",
+    "            print(f\"no result for row {n}\")\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s,absent\n",
-      "t,absent\n",
-      "r,present\n",
-      "i,absent\n",
-      "p,absent\n",
-      "r,present\n",
-      "o,absent\n",
+      "v,absent\n",
+      "v,position 0\n",
+      "i,correct\n",
+      "i,position 1\n",
+      "t,present\n",
+      "t,position 2\n",
       "a,absent\n",
-      "t,absent\n",
-      "e,absent\n",
+      "a,position 3\n",
+      "l,present\n",
+      "l,position 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "out = check_result(2,browser)\n",
+    "out['v'][0]\n",
+    "for key in out:\n",
+    "    # print(key[0])\n",
+    "    print(key + ',' + out[key][0])\n",
+    "    print(key + ',' + 'position ' + out[key][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "b,absent\n",
-      "r,correct\n",
-      "u,correct\n",
-      "n,correct\n",
-      "t,absent\n"
+      "r,absent\"></game-tile\n",
+      "u,absent\"></game-tile\n",
+      "n,absent\"></game-tile\n",
+      "t,correct\"></game-tile\n"
      ]
     }
    ],
@@ -111,7 +144,7 @@
     "            status = sub[(sub.find('evaluation='))+12:(sub.find('evaluation='))+10+stat_target]\n",
     "            print(letter +','+status)\n",
     "        except:\n",
-    "            print(f\"no result for row {i}\")"
+    "            print(f\"no result for row {n}\")"
    ]
   },
   {
@@ -165,6 +198,30 @@
     "\n",
     "print(stat_target)\n",
     "print(letter + \" \" + status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_resutls(row):\n",
+    "    results = []\n",
+    "    for n in range(6):\n",
+    "        qry_script = f\"\"\"return document.querySelector('game-app').shadowRoot.querySelectorAll('game-row')[{n}].shadowRoot.querySelectorAll('game-tile[letter]')\"\"\"\n",
+    "        qry_r = browser.execute_script(qry_script)\n",
+    "        for i, element in enumerate(qry_r):\n",
+    "            try:\n",
+    "                sub = qry_r[i].get_attribute(\"outerHTML\")\n",
+    "                letter = sub[(sub.find('letter=')+8):(sub.find('letter=')+9)]\n",
+    "                stat_target = (sub.find('\" reveal')+1) - (sub.find('evaluation=')) - 11\n",
+    "                status = sub[(sub.find('evaluation='))+12:(sub.find('evaluation='))+10+stat_target]\n",
+    "                # store the resutls to return\n",
+    "                results.append((letter +','+str(i)+','+status))\n",
+    "            except:\n",
+    "                print(f\"no result for row {n}\")\n",
+    "    return results"
    ]
   },
   {
